--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     
     <div class="jd-content"> 
       
-<div class="jd-box"> <img src="https://i.postimg.cc/ZnjnDy0p/waitforitgif.gif" /> 
+<div class="jd-box"> <img src="https://i.postimg.cc/cHzPVyRk/anigif.gif"after 86 /> 
 <span>WAIT...</span>
 </div> 
 
