--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <div class="jd-content"> 
       
 <div class="jd-box"> <img src="https://i.postimg.cc/cHzPVyRk/anigif.gif"after 86 /> 
-<span>WAIT...</span>
+<span>.AFTER 86..</span>
 </div> 
 
 <div class="jd-box"> <img src="https://i.postimg.cc/ZnjnDy0p/waitforitgif.gif" />
