--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <span>.AFTER 86..</span>
 </div> 
 
-<div class="jd-box"> <img src="https://i.postimg.cc/ZnjnDy0p/waitforitgif.gif" />
+<div class="jd-box"> <img src="https://i.postimg.cc/1XJVJnMP/anigif.gif" />
 <span>WAIT...</span>
 </div>       
       
