--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 </div> 
 
 <div class="jd-box"> <img src="https://i.postimg.cc/1XJVJnMP/anigif.gif" />
-<span>WAIT...</span>
+<span>.after 97..</span>
 </div>       
       
-<div class="jd-box"> <img src="https://i.postimg.cc/ZnjnDy0p/waitforitgif.gif" /> 
-<span>WAIT...</span>
+<div class="jd-box"> <img src="https://i.postimg.cc/vm64n8Kq/anigif.gif" /> 
+<span>after 100</span>
 </div> 
 
 <div class="jd-box"> <img src="https://i.postimg.cc/ZnjnDy0p/waitforitgif.gif" />
