--- a/index.html
+++ b/index.html
@@ -74,16 +74,16 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <span>after 100</span>
 </div> 
 
-<div class="jd-box"> <img src="https://i.postimg.cc/ZnjnDy0p/waitforitgif.gif" />
-<span>WAIT...</span>
+<div class="jd-box"> <img src="https://i.postimg.cc/CLkYbBMf/anigif.gif" />
+<span>.AFTER 112..</span>
 </div> 
 
 <div class="jd-box"> <img src="https://i.postimg.cc/ZnjnDy0p/waitforitgif.gif" /> 
 <span>WAIT...</span>
 </div>       
       
-<div class="jd-box"> <img src="https://i.postimg.cc/ZnjnDy0p/waitforitgif.gif" /> 
-<span>WAIT...</span>
+<div class="jd-box"> <img src="https://i.postimg.cc/ydg2BtkS/anigif.gif" /> 
+<span>AFTER 132...</span>
 </div> 
 
 <div class="jd-box"> <img src="https://i.postimg.cc/ZnjnDy0p/waitforitgif.gif" />
