--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <span>AFTER 132...</span>
 </div> 
 
-<div class="jd-box"> <img src="https://i.postimg.cc/ZnjnDy0p/waitforitgif.gif" />
-<span>WAIT...</span>
+<div class="jd-box"> <img src="https://i.postimg.cc/sfJ4xK7B/Cy3xQc4.gif" />
+<span>AFTER 310...</span>
 </div> 
 
-<div class="jd-box"> <img src="https://i.postimg.cc/ZnjnDy0p/waitforitgif.gif" /> 
-<span>WAIT...</span>
+<div class="jd-box"> <img src="https://postimg.cc/4nDmLr7b/78643d63" /> 
+<span>AFTER 412...</span>
 </div>       
       
 <div class="jd-box"> <img src="https://i.postimg.cc/ZnjnDy0p/waitforitgif.gif" /> 
