--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <span>.AFTER 112..</span>
 </div> 
 
-<div class="jd-box"> <img src="https://i.postimg.cc/ZnjnDy0p/waitforitgif.gif" /> 
-<span>WAIT...</span>
+<div class="jd-box"> <img src="https://i.postimg.cc/3RfrfPz4/anigif.gif" /> 
+<span> AFTER 432...</span>
 </div>       
       
 <div class="jd-box"> <img src="https://i.postimg.cc/ydg2BtkS/anigif.gif" /> 
