--- a/index.html
+++ b/index.html
@@ -90,16 +90,16 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <span>AFTER 310...</span>
 </div> 
 
-<div class="jd-box"> <img src="https://postimg.cc/4nDmLr7b/78643d63" /> 
+<div class="jd-box"> <img src="https://postimg.cc/4nDmLr7b/78643d63.gif" /> 
 <span>AFTER 412...</span>
 </div>       
       
-<div class="jd-box"> <img src="https://i.postimg.cc/ZnjnDy0p/waitforitgif.gif" /> 
-<span>WAIT...</span>
+<div class="jd-box"> <img src="https://i.postimg.cc/VNh7w0Kk/anigif.gif" /> 
+<span>AFTER 65...</span>
 </div> 
 
-<div class="jd-box"> <img src="https://i.postimg.cc/ZnjnDy0p/waitforitgif.gif" />
-<span>WAIT...</span>
+<div class="jd-box"> <img src="https://i.postimg.cc/PxZMk3LS/anigif.gif" />
+<span>after 429...</span>
 </div> 
 
 <div class="jd-box"> <img src="https://i.postimg.cc/ZnjnDy0p/waitforitgif.gif" /> 
