--- a/index.html
+++ b/index.html
@@ -102,12 +102,12 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <span>after 429...</span>
 </div> 
 
-<div class="jd-box"> <img src="https://i.postimg.cc/ZnjnDy0p/waitforitgif.gif" /> 
-<span>WAIT...</span>
+<div class="jd-box"> <img src="https://i.postimg.cc/t4YWjSwF/anigif.gif" /> 
+<span>AFTER 432...</span>
 </div>       
       
-<div class="jd-box"> <img src="https://i.postimg.cc/ZnjnDy0p/waitforitgif.gif" /> 
-<span>WAIT...</span>
+<div class="jd-box"> <img src=https://i.postimg.cc/jdjJH3sB/anigif.gif" /> 
+<span>AFTER 479...</span>
 </div> 
 
 <div class="jd-box"> <img src="https://i.postimg.cc/ZnjnDy0p/waitforitgif.gif" />
