--- a/index.html
+++ b/index.html
@@ -110,16 +110,16 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <span>AFTER 479...</span>
 </div> 
 
-<div class="jd-box"> <img src="https://i.postimg.cc/ZnjnDy0p/waitforitgif.gif" />
-<span>WAIT...</span>
+<div class="jd-box"> <img src="https://i.postimg.cc/HkgnSSHp/anigif.gif" />
+<span>AFTER 480...</span>
 </div> 
 
-<div class="jd-box"> <img src="https://i.postimg.cc/ZnjnDy0p/waitforitgif.gif" /> 
-<span>WAIT...</span>
+<div class="jd-box"> <img src="https://i.postimg.cc/YCrkGTMm/anigif.gif" /> 
+<span>AFTER 495...</span>
 </div> 
 
-<div class="jd-box"> <img src="https://i.postimg.cc/ZnjnDy0p/waitforitgif.gif" />
-<span>WAIT...</span>
+<div class="jd-box"> <img src="https://i.postimg.cc/fTZQp13g/anigif.gif" />
+<span>AFTER 497...</span>
  </div> 
 
 <div class="jd-box"> <img src="https://i.postimg.cc/ZnjnDy0p/waitforitgif.gif" /> 
