--- a/index.html
+++ b/index.html
@@ -122,20 +122,20 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <span>AFTER 497...</span>
  </div> 
 
-<div class="jd-box"> <img src="https://i.postimg.cc/ZnjnDy0p/waitforitgif.gif" /> 
-<span>WAIT...</span>
+<div class="jd-box"> <img src="https://i.postimg.cc/0yFWRJW2/anigif.gif" /> 
+<span>after 499...</span>
 </div> 
 
-<div class="jd-box"> <img src="https://i.postimg.cc/ZnjnDy0p/waitforitgif.gif" />
-<span>WAIT...</span>
+<div class="jd-box"> <img src="https://i.postimg.cc/T1t0ky5x/anigif.gif" />
+<span>after 500...</span>
  </div> 
 
-<div class="jd-box"> <img src="https://i.postimg.cc/ZnjnDy0p/waitforitgif.gif" />
-<span>WAIT...</span>
+<div class="jd-box"> <img src="https://i.postimg.cc/J0Y3N9S4/anigif.gif" />
+<span>after 428...</span>
  </div> 
 
-<div class="jd-box"> <img src="https://i.postimg.cc/ZnjnDy0p/waitforitgif.gif" />
-<span>WAIT...</span>
+<div class="jd-box"> <img src="https://i.postimg.cc/wMMLjw3K/anigif.gif" />
+<span>after 414...</span>
  </div> 
 
 <div class="jd-box"> <img src="https://i.postimg.cc/ZnjnDy0p/waitforitgif.gif" /> 
